--- a/package.json
+++ b/package.json
@@ -23,13 +23,14 @@
     "@tailwindcss/vite": "^4.0.3",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
+    "@vercel/node": "^5.1.6",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "daisyui": "5.0.0-beta.6",
     "eslint": "^9.17.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-react": "^7.37.4",
-    "eslint-plugin-react-refresh": "^0.4.16",
     "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
     "prettier": "3.4.2",
     "tailwindcss": "^4.0.3",
