fix: update vercel config

--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,13 @@
     {
       "src": "api/proxy.ts",
       "use": "@vercel/node"
+    },
+    {
+      "src": "package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "dist"
+      }
     }
   ]
 }
