--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,9 @@
 {
-  "builds": [
-    {
-      "src": "api/proxy.ts",
-      "use": "@vercel/node"
-    },
-    {
-      "src": "package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "dist"
-      }
-    }
-  ]
+  "rewrites": [
+    { "source": "/api/(.*)", "destination": "/api/proxy" },
+    { "source": "/(.*)", "destination": "/index.html" }
+  ],
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
+  "framework": "vite"
 }
